--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - dev_default
 
   pact_broker:
-    build: ./pact-broker
+    build: ./docker/pact-broker
     ports:
       - 4264:9292
     depends_on:
@@ -45,6 +45,21 @@ services:
     networks:
       - dev_default
   
+# Custom services.
+
+  chat:
+    build: ./services/chatService
+    environment:
+      DB_HOST: db
+      DB_PORT: 4261
+      DB_USER: dev
+      DB_DBNAME: chat
+      DB_PASSWORD: FinchDev
+    ports:
+      - 4265:80
+    networks:
+      - dev_default
+
 volumes:
   dbdata:
   mqdata:
