--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,57 +2,10 @@ version: '3.4'
 
 services:
 
-  # Base services.
-  db:
-    image: postgres:11.5
-    environment:
-      POSTGRES_USER: dev
-      POSTGRES_PASSWORD: FinchDev
-      POSTGRES_MULTIPLE_DATABASES: "\"pact-broker\",\"chat\""
-    volumes:
-      - dbdata:/var/lib/postgresql/data
-      - ./scripts/startup:/docker-entrypoint-initdb.d
-    ports:
-      - 4261:5432
-    networks:
-      - dev_default
-
-# default user: guest/guest
-  mq:
-    image: rabbitmq:3.8-management-alpine
-    environment: 
-      RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: debug
-    volumes:
-      - mqdata:/etc/rabbitmq/
-      - mqdata:/var/lib/rabbitmq/
-      - mqdata:/var/log/rabbitmq/
-    ports:
-      - 4262:5672
-      - 4263:15672
-    networks:
-      - dev_default
-
-  pact_broker:
-    build: ./docker/pact-broker
-    ports:
-      - 4264:9292
-    depends_on:
-      - db
-    environment:
-      PACT_BROKER_DATABASE_USERNAME: dev
-      PACT_BROKER_DATABASE_PASSWORD: FinchDev
-      PACT_BROKER_DATABASE_HOST: db
-      PACT_BROKER_DATABASE_NAME: pact-broker
-      PACT_BROKER_PORT: "9292"
-    networks:
-      - dev_default
-  
 # Custom services.
 
   chat:
     build: ./services/chatService
-    depends_on:
-      - db
     environment:
       DB_HOST: .
       DB_PORT: 4261
@@ -64,9 +17,7 @@ services:
     networks:
       - dev_default
 
-volumes:
-  dbdata:
-  mqdata:
-
 networks:
   dev_default:
+    driver: overlay
+    attachable: true
