--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.5'
 
 services:
 
@@ -55,5 +55,4 @@ volumes:
 
 networks:
   dev_default:
-    driver: overlay
-    attachable: true
+    name: finch_dev_default
