--- a/services/chatService/dockerfile
+++ b/services/chatService/dockerfile
@@ -12,11 +12,19 @@ COPY . .
 
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o /go/bin/server
 
-FROM alpine
+# FROM alpine
+# COPY --from=build-env /go/bin/server /go/bin/server
+
+# COPY start.sh .
+# COPY wait-for-database.sh .
+
+# EXPOSE 80
+# ENTRYPOINT ./start.sh
+
+FROM scratch
+
 COPY --from=build-env /go/bin/server /go/bin/server
 
-COPY start.sh .
-COPY wait-for-database.sh .
-
 EXPOSE 80
-ENTRYPOINT ./start.sh
+
+ENTRYPOINT /go/bin/server
